--- a/TP_lab2_zad2/TP_lab2_zad2.vcxproj
+++ b/TP_lab2_zad2/TP_lab2_zad2.vcxproj
@@ -146,6 +146,7 @@
     <Text Include="Text.txt" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Text.dat" />
     <None Include="Text.doc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
